--- a/client/src/Components/MainPage/MainPage.css
+++ b/client/src/Components/MainPage/MainPage.css
@@ -34,3 +34,28 @@
     margin-top: 1em;
     margin-bottom: 1em;
 }
+
+.results {
+    display: flex;
+    margin-top: 1em;
+    justify-content: space-around;
+}
+
+.losersUl,
+.gainersUl {
+    list-style: none;
+}
+.gainerTicker,
+.loserTicker {
+    font-size: 1.25em;
+    font-weight: 700;
+    text-decoration: none;
+}
+
+.gainerTicker {
+    color: #136e5c;
+}
+
+.loserTicker {
+    color: red;
+}
