--- a/client/src/Components/MainPage/MainPage.css
+++ b/client/src/Components/MainPage/MainPage.css
@@ -9,9 +9,32 @@
     margin-top: 1em;
 }
 .numConsecutiveDays {
-    width: fit-content;
-    height: fit-content;
+    margin-left: 1em;
+    border: none;
+    border-radius: 5px;
+    width: 7%;
+    padding: 3px 0px 3px 0px;
     text-align: center;
+    box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
+}
+/* .numConsecutiveDays:focus {
+    outline: 2px solid #8324fb;
+} */
+
+.green {
+    background: #2afeb7;
+}
+
+.green:focus {
+    outline: 2px solid green;
+}
+
+.red {
+    background: rgba(255, 49, 49, 0.7);
+}
+
+.red:focus {
+    outline: 2px solid red;
 }
 
 #stocksForm {
