--- a/client/src/Components/MainPage/MainPage.css
+++ b/client/src/Components/MainPage/MainPage.css
@@ -1,25 +1,38 @@
 .stockTypeButtons {
     display: flex;
+    align-items: center;
+    align-content: center;
+}
+
+.gainers,
+.losers {
     margin-right: 1em;
+    display: flex;
+    flex-direction: column-reverse;
+}
+
+#gainersInput,
+#losersInput {
+    margin-right: 0.5em;
+    cursor: pointer;
 }
 
 .stocks {
     display: flex;
-    justify-content: center;
+    flex-direction: column;
     margin-top: 1em;
+    align-items: center;
 }
-.numConsecutiveDays {
-    margin-left: 1em;
+
+.numConsecutiveInput {
+    margin-left: 0.5em;
     border: none;
     border-radius: 5px;
-    width: 7%;
+    width: 10%;
     padding: 3px 0px 3px 0px;
     text-align: center;
     box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
 }
-/* .numConsecutiveDays:focus {
-    outline: 2px solid #8324fb;
-} */
 
 .green {
     background: #2afeb7;
@@ -42,13 +55,17 @@
 }
 
 .submitBtn {
-    margin-top: 1em;
+    margin-top: 2em;
+    width: 22.5%;
+    height: 2.5em;
+    background: #2439fb;
+    border-radius: 8px;
+    border: none;
+    color: white;
+    font-weight: 600;
+    font-size: 1.125em;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     cursor: pointer;
-}
-
-.consecutiveDaysDiv {
-    display: flex;
-    align-items: center;
 }
 
 .error {
@@ -60,7 +77,7 @@
 
 .results {
     display: flex;
-    margin-top: 1em;
+    margin-top: 2em;
     justify-content: space-around;
 }
 
@@ -81,4 +98,15 @@
 
 .loserTicker {
     color: red;
+}
+
+.intervalDiv {
+    margin-top: 2em;
+    margin-bottom: 2em;
+    align-content: center;
+}
+
+.interval {
+    margin-left: 0.5em;
+    cursor: pointer;
 }
