--- a/client/src/Components/MainPage/MainPage.css
+++ b/client/src/Components/MainPage/MainPage.css
@@ -68,6 +68,20 @@
     cursor: pointer;
 }
 
+.submitBtn:disabled {
+    margin-top: 2em;
+    width: 22.5%;
+    height: 2.5em;
+    background: grey;
+    border-radius: 8px;
+    border: none;
+    color: white;
+    font-weight: 600;
+    font-size: 1.125em;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    cursor: not-allowed;
+}
+
 .error {
     color: red;
     text-align: center;
