--- a/client/src/App.css
+++ b/client/src/App.css
@@ -3,3 +3,29 @@
     padding: 0;
     font-family: "Poppins", sans-serif;
 }
+
+select {
+    /* styling */
+    background-color: white;
+    border: thin solid blue;
+    border-radius: 4px;
+    display: inline-block;
+    font: inherit;
+    line-height: 1.5em;
+    padding: 0.5em 3.5em 0.5em 1em;
+
+    /* reset */
+
+    margin: 0;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+}
+
+label,
+p {
+    font-size: 1.2rem;
+    font-weight: 500;
+}
