--- a/client/src/Components/MainPage/MainPage.css
+++ b/client/src/Components/MainPage/MainPage.css
@@ -32,6 +32,7 @@
     padding: 3px 0px 3px 0px;
     text-align: center;
     box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
+    font-size: 1.2rem;
 }
 
 .green {
@@ -114,15 +115,38 @@
     color: red;
 }
 
-.intervalDiv {
+.intervalDiv,
+.countryDiv {
     margin-top: 2em;
     margin-bottom: 2em;
     align-content: center;
 }
 
-.interval {
+.interval,
+.country {
     margin-left: 0.5em;
     cursor: pointer;
+    padding-left: 0.5em;
+    background-image: linear-gradient(45deg, transparent 50%, gray 50%),
+        linear-gradient(135deg, gray 50%, transparent 50%),
+        linear-gradient(to right, #ccc, #ccc);
+    background-position: calc(100% - 20px) calc(1em + 2px),
+        calc(100% - 15px) calc(1em + 2px), calc(100% - 2.5em) 0.5em;
+    background-size: 5px 5px, 5px 5px, 1px 1.5em;
+    background-repeat: no-repeat;
+}
+
+.interval:hover,
+.country:hover {
+    background-image: linear-gradient(45deg, green 50%, transparent 50%),
+        linear-gradient(135deg, transparent 50%, green 50%),
+        linear-gradient(to right, #ccc, #ccc);
+    background-position: calc(100% - 15px) 1em, calc(100% - 20px) 1em,
+        calc(100% - 2.5em) 0.5em;
+    background-size: 5px 5px, 5px 5px, 1px 1.5em;
+    background-repeat: no-repeat;
+    border-color: green;
+    outline: 0;
 }
 
 .stockBatches {
